Added websocket-connection code but still using the Node server mock. Still working on transferring to the new format.

--- a/src/css/Header.scss
+++ b/src/css/Header.scss
@@ -7,4 +7,9 @@
     .timestamp {
         margin-top: 15px;
     }
+
+    .simulation.start {
+        margin-left: 10px;
+        margin-top: 5px;
+    }
 }
