--- a/src/css/Ieee8500View.scss
+++ b/src/css/Ieee8500View.scss
@@ -12,7 +12,7 @@ $reg_VREG4_color: orange;
     .topology {
         float: left;
         width: 70%;
-        height: 100%;
+        height: 85%;
     }
 
     .plots {
@@ -20,6 +20,11 @@ $reg_VREG4_color: orange;
         width: 30%;
         height: 100%;
         border-left: 2px #efefef solid;
+    }
+    .messages {
+        float: left;
+        width: 70%;
+        height: 20%;        
     }
 
     circle.element {
