changing the simulation play button from header to inside the IEEE8500 view

--- a/src/css/Header.scss
+++ b/src/css/Header.scss
@@ -8,6 +8,10 @@
         margin-top: 15px;
     }
 
+    .application.select {
+        margin-top: 10px;
+    }
+
     .simulation.start {
         margin-left: 10px;
         margin-top: 5px;
