--- a/src/css/Ieee8500View.scss
+++ b/src/css/Ieee8500View.scss
@@ -15,6 +15,18 @@ $reg_VREG4_color: orange;
         height: 85%;
     }
 
+    .timestamp {
+        margin-top: 15px;
+    }
+
+    .application.select {
+        margin-top: 10px;
+    }
+
+    .simulation.start {
+        margin-left: 10px;
+        margin-top: 5px;
+    }
     .plots {
         float: right;
         width: 30%;
