--- a/src/css/MainView.scss
+++ b/src/css/MainView.scss
@@ -1,4 +1,14 @@
-.main-view {
-    width: 100%;
-    height: 100%;   
+$APPBAR_HEIGHT: 60px;
+.app-bar {
+    height: $APPBAR_HEIGHT;
+}
+
+.app-title {
+    padding: 15px 15px;
+    font-size: 18px;
+}
+
+.drawer .content {
+    height: calc(100vh - #{$APPBAR_HEIGHT});
+    overflow-y: auto;
 }
