- Add redux to handle request config form submission

--- a/src/js/views/dropdown-menu/DropdownMenu.styles.scss
+++ b/src/js/views/dropdown-menu/DropdownMenu.styles.scss
@@ -60,7 +60,7 @@
     width: 98%;
     left: 50%;
     transform: translate(-50%, 7px);
-    box-shadow: 0 0 5px grey;
+    box-shadow: 0 0 2px grey;
     border-radius: 3px;
     background-color: #fff;
     z-index: 300;
@@ -68,7 +68,7 @@
     overflow-y: auto;
     visibility: hidden;
     opacity: 0;
-    transition: opacity 0.5s ease, visibility 0.5s ease;
+    transition: visibility 0.25s ease, opacity 0.25s ease;
     &:empty {
         box-shadow: none;
     }
@@ -86,7 +86,7 @@
     padding-left: 5px;
     cursor: pointer;
     &:hover {
-        background-color: lightblue;
+        background-color: #add8e6;
     }
     .text {
         font-weight: normal;
