--- a/src/js/views/ieee8500/RequestConfigForm.styles.scss
+++ b/src/js/views/ieee8500/RequestConfigForm.styles.scss
@@ -1,5 +1,4 @@
 @import '../../../assets/constants';
-
 .request-config-form {
     position: relative;
     padding-bottom: 20px;
@@ -37,6 +36,7 @@
             border-radius: 3px;
             padding: 5px;
             height: 150px;
+            vertical-align: top;
         }
         .input-field {
             display: inline-block;
@@ -86,6 +86,7 @@
         }
     }
 }
+
 .modal .control textarea {
     width: 100%;
     height: 60vh;
