minor changes to the simulation request config form and adding an Application page

--- a/src/assets/constants.scss
+++ b/src/assets/constants.scss
@@ -1,4 +1,4 @@
 $MAIN_PRIMARY: #009688;
 $MAIN_PRIMARY_TEXT: #fff;
-$BUTTON_POSITIVE: #3F51B5;
-$BUTTON_POSITIVE_HOVER: #5C6BC0;
+$BUTTON_POSITIVE: #337ab7;
+$BUTTON_POSITIVE_HOVER: #337ab7;
