--- a/src/assets/global.styles.scss
+++ b/src/assets/global.styles.scss
@@ -64,9 +64,9 @@ button.positive {
     display: inline-block;
     padding: 0 5px;
     border-radius: 3px;
-    background-color: $MAIN_PRIMARY;
+    background-color: #fff;
     margin: auto 5px;
-    color: #fff;
+    color: #000;
 }
 .inline-value {
     display: inline-block;
