- Fix typo in file name when importing style sheet for dropdown menu - Use a div with contenteditable attr enabled to make editing the config string easier - Add a route to trigger the request config editor form to avoid trigger unneccessary re-rendering of the topology view

--- a/src/assets/constants.scss
+++ b/src/assets/constants.scss
@@ -1,4 +1,11 @@
+$APP_BAR_HEIGHT: 60px;
 $MAIN_PRIMARY: #009688;
 $MAIN_PRIMARY_TEXT: #fff;
-$BUTTON_POSITIVE: #337ab7;
-$BUTTON_POSITIVE_HOVER: #337ab7;
+$BUTTON_POSITIVE: #3F51B5;
+$BUTTON_POSITIVE_ACTIVE: #ADD8E6;
+$BUTTON_POSITIVE_TEXT: #FFF;
+$BUTTON_POSITIVE_HOVER: #5C6BC0;
+$FAB_POSITIVE: #009688;
+$FAB_POSITIVE_TEXT: #FFF;
+$FAB_NEGATIVE: #00BFA5;
+$FAB_NEGATIVE_TEXT: #FFF;
