--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,7 +1,13 @@
+@import '../assets/constants';
+
 body {
     overflow: hidden;
 }
 html, body, #example, .main-view, .view.ieee8500 {
     width: 100%;
     height: 100%;
+}
+
+main {
+    height: 100vh;
 }
