--- a/src/js/views/dropdown-menu/DropdownMenu.styles.scss
+++ b/src/js/views/dropdown-menu/DropdownMenu.styles.scss
@@ -57,10 +57,10 @@
     margin: 0;
     padding: 0;
     position: absolute;
-    width: 98%;
-    left: 50%;
-    transform: translate(-50%, 7px);
-    box-shadow: 0 0 2px grey;
+    width: 100%;
+    left: 0;
+    top: 40px;
+    box-shadow: 0 0 10px grey;
     border-radius: 3px;
     background-color: #fff;
     z-index: 300;
