--- a/src/js/views/app-bar/AppBar.styles.scss
+++ b/src/js/views/app-bar/AppBar.styles.scss
@@ -1,8 +1,11 @@
+@import '../../../assets/constants';
+
 .app-bar {
     width: 100vw;
     display: flex;
     position: relative;
     top: 0;
+    height: $APP_BAR_HEIGHT;
     left: 0;
     align-items: center;
     background-color: #fff;
