--- a/src/js/views/ieee8500/RequestConfigForm.styles.scss
+++ b/src/js/views/ieee8500/RequestConfigForm.styles.scss
@@ -30,12 +30,15 @@
             outline: none;
             padding: 5px;
         }
-        textarea {
+        textarea, .config-str-editor {
             width: 600px;
             box-shadow: 0 0 3px #000;
             border-radius: 3px;
             padding: 5px;
             height: 150px;
+            max-height: 150px;
+            overflow-y: auto;
+            white-space: pre;
             vertical-align: top;
         }
         .input-field {
@@ -61,28 +64,18 @@
     .show-simulation-output {
         margin-left: 20px;
     }
-    .done {
+    .options {
         position: fixed;
+        display: flex;
+        flex-flow: column nowrap;
         bottom: 30px;
         right: 50px;
-        width: 40px;
-        height: 40px;
-        border-radius: 100%;
-        box-shadow: 0 0 5px #000;
-        background-color: $MAIN_PRIMARY;
-        cursor: pointer;
-        transition: transform 600ms cubic-bezier(0.23, 1, 0.32, 1);
+    }
+    .done {
         text-decoration: none;
-        transform-origin: 50% 50%;
+        margin-top: 10px;
         &:before {
-            transform-origin: 50% 50%;
             content: '\f00c';
-            font-size: 20px;
-            color: $MAIN_PRIMARY_TEXT;
-            backface-visibility: hidden;
-        }
-        &:hover {
-            transform: scale(1.1);
         }
     }
 }
