changed the simulation status topic to get all the logs. Fixed the scrollbar issue

--- a/src/css/MainView.scss
+++ b/src/css/MainView.scss
@@ -6,6 +6,7 @@
 
 .drawer .content {
     height: calc(100vh - #{$APP_BAR_HEIGHT});
+    overflow-y: auto;
 }
 
 .previous-simulations .nested-drawer-items {
