--- a/src/js/views/dropdown-menu/DropdownMenu.styles.scss
+++ b/src/js/views/dropdown-menu/DropdownMenu.styles.scss
@@ -60,7 +60,7 @@
     min-width: 100%;
     left: 0;
     top: 40px;
-    box-shadow: 0 0 10px grey;
+    box-shadow: 0 0 5px #888;
     border-radius: 3px;
     background-color: #fff;
     z-index: 300;
