- Add services to subscribe to the different topics to get data instead of getting it from the node server - Add components to render the topology and status log messages

--- a/src/assets/global.styles.scss
+++ b/src/assets/global.styles.scss
@@ -34,8 +34,8 @@
     &:hover {
         transform: scale(1.1);
     }
-
 }
+
 .backdrop {
     background-color: rgba(50, 50, 50, 0.6);
     position: fixed;
@@ -79,6 +79,10 @@ button.positive {
         background-size: 100%;
         transition: background 0s;
     }
+}
+
+.btn {
+    outline: none;
 }
 
 @keyframes fadein {
