--- a/src/assets/constants.scss
+++ b/src/assets/constants.scss
@@ -9,3 +9,5 @@ $FAB_POSITIVE: #009688;
 $FAB_POSITIVE_TEXT: #FFF;
 $FAB_NEGATIVE: #00BFA5;
 $FAB_NEGATIVE_TEXT: #FFF;
+$SIMULATION_STATUS_LOGGER_HEIGHT: 35vh;
+$TOPOLOGY_RENDERER_HEIGHT: calc(100vh - #{$SIMULATION_STATUS_LOGGER_HEIGHT} - #{$APP_BAR_HEIGHT});
