--- a/src/js/views/simulation-status-logger/SimulationStatusLogger.styles.scss
+++ b/src/js/views/simulation-status-logger/SimulationStatusLogger.styles.scss
@@ -1,4 +1,4 @@
-@import '../../../assets/constants';
+@import '../../../constants';
 .simulation-status-logger {
     height: $SIMULATION_STATUS_LOGGER_HEIGHT;
     position: relative;
