--- a/src/constants.scss
+++ b/src/constants.scss
@@ -1,10 +1,10 @@
 $APP_BAR_HEIGHT: 60px;
 $MAIN_PRIMARY: #009688;
 $MAIN_PRIMARY_TEXT: #fff;
-$BUTTON_POSITIVE: #3F51B5;
+$BUTTON_POSITIVE: $MAIN_PRIMARY;
 $BUTTON_POSITIVE_ACTIVE: #ADD8E6;
 $BUTTON_POSITIVE_TEXT: #FFF;
-$BUTTON_POSITIVE_HOVER: #5C6BC0;
+$BUTTON_POSITIVE_HOVER: #00bdac;
 $FAB_POSITIVE: #009688;
 $FAB_POSITIVE_TEXT: #FFF;
 $FAB_NEGATIVE: #00BFA5;
