--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,9 +1,13 @@
-@import '../assets/constants';
-
+@import '../constants';
 body {
     overflow: hidden;
 }
-html, body, #example, .main-view, .view.ieee8500 {
+
+html,
+body,
+#example,
+.main-view,
+.view.ieee8500 {
     width: 100%;
     height: 100%;
 }
