--- a/src/js/views/topology/TopologyModelRenderer.styles.scss
+++ b/src/js/views/topology/TopologyModelRenderer.styles.scss
@@ -1,9 +1,9 @@
-@import '../../../assets/constants';
+@import '../../../constants';
 .topology-model-renderer {
     height: $TOPOLOGY_RENDERER_HEIGHT;
     width: 100%;
     position: relative;
-    header {
+    &>header {
         height: 50px;
         display: flex;
         justify-content: flex-end;
@@ -26,5 +26,32 @@
     }
     path.link {
         stroke-width: 10px;
+    }
+    .label {
+        display: block;
+        width: -moz-max-content;
+        width: -webkit-max-content;
+        width: max-content;
+        font-size: 600px;
+        color: #000;
+        border: 100px solid #5f2a2a;
+        padding: 100px;
+        font-weight: 700;
+        line-height: 1.3;
+        white-space: nowrap;
+        border-radius: .25em;
+        text-align: left;
+        background-color: #adde;
+        table {
+            width: 6000px;
+        }
+        header {
+            text-align: center;
+            margin-bottom: 150px;
+        }
+        td:nth-child(2),
+        td:nth-child(3) {
+            text-align: right;
+        }
     }
 }
