- The plots are now getting rendered

--- a/src/js/views/plot/Plot.styles.scss
+++ b/src/js/views/plot/Plot.styles.scss
@@ -11,6 +11,51 @@
     }
     path.time-series-line {
         fill: none;
+    }
+    ._190-7361 {
+        stroke: red;
+    }
+    ._190-8581 {
+        stroke: green;
+    }
+    ._190-8593 {
+        stroke: blue;
+    }
+    .__hvmv_sub_lsb {
+        stroke: black;
+    }
+    ._l2673313 {
+        stroke: orange;
+    }
+    ._l2876814 {
+        stroke: pink;
+    }
+    ._l2955047 {
+        stroke: cyan;
+    }
+    ._l3160107 {
+        stroke: magenta;
+    }
+    ._l3254238 {
+        stroke: brown;
+    }
+    ._m1047574 {
+        stroke: lightcoral;
+    }
+    ._hvmv_sub {
+        stroke: orange;
+        stroke-width: 2px;
+    }
+    ._FEEDER_REG {
+        stroke: orange;
+    }
+    ._VREG2 {
+        stroke: red;
+    }
+    ._VREG3 {
+        stroke: brown;
+    }
+    ._VREG4 {
         stroke: blue;
     }
 }
