- ieee123 model is now being rendered as expected - Add a component to interact with stomp client client directly

--- a/src/js/views/plot/Plot.styles.scss
+++ b/src/js/views/plot/Plot.styles.scss
@@ -12,28 +12,28 @@
     path.time-series-line {
         fill: none;
     }
-    ._190-7361 {
+    ._190-7361, ._53 {
         stroke: red;
     }
-    ._190-8581 {
+    ._190-8581, ._82 {
         stroke: green;
     }
-    ._190-8593 {
+    ._190-8593, ._610 {
         stroke: blue;
     }
     .__hvmv_sub_lsb {
         stroke: black;
     }
-    ._l2673313 {
+    ._l2673313, ._sw1 {
         stroke: orange;
     }
-    ._l2876814 {
+    ._l2876814, ._reg2 {
         stroke: pink;
     }
-    ._l2955047 {
+    ._l2955047, ._reg3 {
         stroke: cyan;
     }
-    ._l3160107 {
+    ._l3160107, ._reg4 {
         stroke: magenta;
     }
     ._l3254238 {
