--- a/src/js/views/topology/TopologyModelRenderer.styles.scss
+++ b/src/js/views/topology/TopologyModelRenderer.styles.scss
@@ -32,26 +32,44 @@
         width: -moz-max-content;
         width: -webkit-max-content;
         width: max-content;
-        font-size: 600px;
         color: #000;
-        border: 100px solid #5f2a2a;
-        padding: 100px;
         font-weight: 700;
-        line-height: 1.3;
         white-space: nowrap;
-        border-radius: .25em;
         text-align: left;
         background-color: #adde;
-        table {
-            width: 6000px;
-        }
         header {
             text-align: center;
-            margin-bottom: 150px;
         }
         td:nth-child(2),
         td:nth-child(3) {
             text-align: right;
+        }
+    }
+    .ieee8500 .label {
+        font-size: 600px;
+        border: 100px solid #5f2a2a;
+        padding: 100px;
+        line-height: 1.3;
+        border-radius: .25em;
+        table {
+            width: 6000px;
+        }
+        header {
+            margin-bottom: 150px;
+        }
+
+    }
+    .ieee123 .label {
+        font-size: 120px;
+        border: 10px solid #5f2a2a;
+        padding: 10px;
+        line-height: 1.3;
+        border-radius: .25em;
+        table {
+            width: initial;
+        }
+        td:first-of-type {
+            width: 200px;
         }
     }
 }
