--- a/src/js/views/plot/Plot.styles.scss
+++ b/src/js/views/plot/Plot.styles.scss
@@ -9,6 +9,10 @@
         text-transform: uppercase;
         padding-left: 5px;
     }
+    .canvas {
+        width: 100%;
+        height: 100%;
+    }
     path.time-series-line {
         fill: none;
     }
