- Add realtime checkbox to simulation config form and remove timestep frequency and timestemp increment options

--- a/src/app/views/topology/SimulationConfigForm.styles.scss
+++ b/src/app/views/topology/SimulationConfigForm.styles.scss
@@ -99,6 +99,10 @@
             content: '\f00c';
         }
     }
+
+    .gridappsd-checkbox {
+        transform: translateY(7px);
+    }
 }
 
 .modal .control textarea {
