- Add a button to show a hint next to realtime checkbox - Add a tooltip component

--- a/src/app/views/checkbox/CheckBox.scss
+++ b/src/app/views/checkbox/CheckBox.scss
@@ -13,13 +13,13 @@
     &:before {
         content: '\f096';
         font-size: 1.5em;
-        color: #37dc37;
+        color: #000;
         vertical-align: middle;
     }
     &:after {
         content: '\f00c';
         font-size: 1.5em;
-        color: #72b772;
+        color: #000;
         vertical-align: middle;
         left: 3px;
         transform-origin: 50% 0;
