--- a/src/global.styles.scss
+++ b/src/global.styles.scss
@@ -8,6 +8,7 @@ body,
 main {
     width: 100vw;
     height: 100vh;
+    font-family: 'Roboto', sans-serif;
 }
 
 .app-icon {
@@ -93,6 +94,64 @@ button:disabled {
 
 .btn {
     outline: none;
+}
+
+.gridappsd-form-control {
+    margin: 20px;
+    z-index: 10;
+}
+
+.gridappsd-form-control__label {
+    display: inline-block;
+    font-weight: normal;
+    margin: 10px;
+    margin-left: 25px;
+    width: 200px;
+    vertical-align: top;
+}
+
+.gridappsd-form-control__ripple-input-field {
+    display: inline-block;
+    position: relative;
+}
+
+.gridappsd-form-control__multiline-input {
+    width: 600px;
+    box-shadow: 0 0 3px #555;
+    border-radius: 3px;
+    padding: 5px;
+    height: 150px;
+    max-height: 150px;
+    overflow-y: auto;
+    white-space: pre;
+    vertical-align: top;
+    border: none;
+    display: inline-block;
+}
+
+.gridappsd-form-control__ripple-input-field__input {
+    border: none;
+    border-bottom: 2px solid #e3e3e3;
+    width: 300px;
+    outline: none;
+    padding: 5px;
+}
+
+.gridappsd-form-control__ripple-input-field__ripple-bar {
+    width: 100%;
+    height: 2px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    transition: transform 500ms cubic-bezier(0.23, 1, 0.32, 1);
+    transform: scaleX(0);
+    background-color: #000;
+    transform-origin: 50% 50%;
+    display: inline-block;
+}
+
+.gridappsd-form-control__ripple-input-field__input:focus~.gridappsd-form-control__ripple-input-field__ripple-bar {
+    transform: scaleX(1);
 }
 
 @keyframes fadein {
