--- a/src/app/simulation/simulation-control/SimulationControl.scss
+++ b/src/app/simulation/simulation-control/SimulationControl.scss
@@ -5,6 +5,7 @@
     align-items: center;
     border-bottom: 2px solid rgba(0, 0, 0, 0.2);
     background-color: #fff;
+    z-index: 1;
     * {
         margin: 0 5px;
     }
