--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -1,11 +1,13 @@
 .topology-renderer-simulation-status-logger-measurement-graphs {
     display: flex;
     overflow: hidden;
+    z-index: 1;
 }
 
 .topology-renderer-simulation-status-logger {
     width: 70vw;
     display: flex;
+    position: relative;
     flex-flow: column nowrap;
     border-right: 2px solid rgba(0, 0, 0, 0.08);
 }
@@ -17,4 +19,6 @@
     flex-flow: column nowrap;
     align-items: center;
     height: calc(100vh - 60px);
+    background-color: #fff;
+    z-index: 1;
 }
