--- a/src/app/simulation/simulation-configuration/SimulationConfiguration.scss
+++ b/src/app/simulation/simulation-configuration/SimulationConfiguration.scss
@@ -18,7 +18,8 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    box-shadow: -2px 2px 10px rgba(0, 0, 0, 0.5);
+    // box-shadow: -2px 2px 10px rgba(0, 0, 0, 0.5);
+    border-top: 2px solid rgba(0, 0, 0, 0.05);
 }
 
 .simulation-configuration__actions__cancel {
