--- a/src/app/simulation/simulation-status-logger/SimulationStatusLogger.scss
+++ b/src/app/simulation/simulation-status-logger/SimulationStatusLogger.scss
@@ -1,12 +1,16 @@
 .simulation-status-logger {
-    height: 35vh;
-    position: relative;
+    position: absolute;
     counter-reset: message-number;
     background-color: transparent;
+    bottom: 0;
+    width: 100%;
+    z-index: 1;
     header {
         height: 30px;
         display: inline-flex;
         align-items: center;
+        position: absolute;
+        top: -30px;
         span {
             pointer-events: none;
             user-select: none;
@@ -36,13 +40,13 @@
     height: 10px;
     position: absolute;
     width: 100%;
+    border-top: 2px solid rgba(0, 0, 0, 0.08);
 }
 
 .simulation-status-logger__content {
-    max-height: calc(100% - 30px);
-    height: calc(100% - 30px);
+    max-height: 100%;
+    height: 100%;
     overflow-y: auto;
     white-space: pre;
     background-color: #fff8f8;
-    border-top: 2px solid rgba(0, 0, 0, 0.08);
 }
