--- a/src/app/topology-renderer/views/model-renderer/ModelRenderer.scss
+++ b/src/app/topology-renderer/views/model-renderer/ModelRenderer.scss
@@ -1,7 +1,7 @@
 .model-renderer {
-    height: calc(100vh - 35vh - 60px - 50px);
+    height: calc(100vh - 60px);
     width: 100%;
-    position: relative;
+    position: absolute;
     svg {
         width: 100%;
         height: 100%;
@@ -10,11 +10,7 @@
         height: calc(100% + 30px);
         z-index: 0;
     }
-    circle.element {
-        stroke: gray;
-        stroke-width: 1px;
-    }
-    path.link {
+    path.edge {
         stroke-width: 10px;
     }
 }
