- Add node name header to each label when the simulation is started - Bug fix: dropdown menu did not open on firefox because it listened to the onblur event on the trigger - Bug fix: the symbols did not show when rendering the ieee123 model because there was a typo in the model renderer, instead of using `!==`, `===` was used

--- a/src/app/shared/views/dropdown-menu/DropdownMenu.scss
+++ b/src/app/shared/views/dropdown-menu/DropdownMenu.scss
@@ -89,3 +89,11 @@
 .app-dropdown-menu-item.selected {
     background-color: rgba(0, 0, 0, 0.08);
 }
+
+.app-dropdown-menu__click-capture {
+    position: fixed;
+    top: -500vw;
+    left: -500vh;
+    width: 1000vw;
+    height: 1000vh;
+}
