--- a/src/app/simulation/label/views/label/Label.scss
+++ b/src/app/simulation/label/views/label/Label.scss
@@ -18,3 +18,10 @@
         padding: 0 5px;
     }
 }
+
+.label__heading {
+    font-weight: bold;
+    text-align: center;
+    font-weight: 13px;
+    padding-bottom: 5px;
+}
