- Include the switch's MRID in the request body for the request sent  when the switch is clicked - Use promise as a wrapper around Stomp subscription confirmations

--- a/src/app/shared/views/dropdown-menu/DropdownMenu.scss
+++ b/src/app/shared/views/dropdown-menu/DropdownMenu.scss
@@ -1,6 +1,5 @@
 .app-dropdown-menu {
-    position: relative;
-    display: inline-block;
+    position: relative; // display: inline-block;
 }
 
 .app-dropdown-menu-toggler {
@@ -92,8 +91,8 @@
 
 .app-dropdown-menu__click-capture {
     position: fixed;
-    top: -500vw;
-    left: -500vh;
+    top: -50vw;
+    left: -50vh;
     width: 1000vw;
     height: 1000vh;
 }
