- Fix topology rendering error when switching between models - Remove the default index for Line name dropdown so it does not send a request to the platform

--- a/src/app/navigation/views/drawer/DrawerItem.scss
+++ b/src/app/navigation/views/drawer/DrawerItem.scss
@@ -24,6 +24,22 @@
     }
 }
 
+.drawer-item__icon__form:before {
+    content: '\f298';
+}
+
+.drawer-item__icon__app:before {
+    content: '\f0a0';
+}
+
+.drawer-item__icon__browse:before {
+    content: '\f002';
+}
+
+.drawer-item__icon__terminal:before {
+    content: '\f120';
+}
+
 .drawer-item__label {
     color: rgba(0, 0, 0, 0.7);
 }
