Add component to track websocket status and ability to reconnect when disconnected

--- a/src/app/navigation/Navigation.scss
+++ b/src/app/navigation/Navigation.scss
@@ -13,3 +13,10 @@
         color: #000;
     }
 }
+
+.icon-button.websocket-connection-active {
+    margin-left: auto;
+    &::before {
+        color: #09d855;
+    }
+}
