--- a/src/app/shared/views/buttons/icon-button/IconButton.scss
+++ b/src/app/shared/views/buttons/icon-button/IconButton.scss
@@ -14,6 +14,19 @@
     &:hover {
         box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2), 0px 2px 7px rgba(0, 0, 0, 0.2);
     }
+    &>span {
+        font-family: Roboto;
+    }
+}
+
+.icon-button.has-label {
+    width: auto;
+    height: auto;
+    padding: 5px 10px;
+    &::before {
+        margin-right: 10px;
+        font-size: 25px;
+    }
 }
 
 .icon-button.minus:before {
@@ -26,4 +39,12 @@
 
 .icon-button.question:before {
     content: '\f128';
+}
+
+.icon-button.websocket-connection-active:before {
+    content: '\f058';
+}
+
+.icon-button.websocket-connection-inactive:before {
+    content: '\f057';
 }
