Add missing labels (#52)

--- a/src/app/navigation/views/drawer/DrawerItem.scss
+++ b/src/app/navigation/views/drawer/DrawerItem.scss
@@ -40,6 +40,10 @@
     content: '\f120';
 }
 
+.drawer-item__icon__cubes:before {
+    content: '\f1b3';
+}
+
 .drawer-item__label {
     color: rgba(0, 0, 0, 0.7);
 }
