--- a/src/app/shared/views/dropdown-menu/DropdownMenu.scss
+++ b/src/app/shared/views/dropdown-menu/DropdownMenu.scss
@@ -7,6 +7,7 @@
     display: flex;
     padding: 8px 5px 8px 10px;
     min-width: 150px;
+    max-width: 150px;
     align-items: center;
     border-radius: 2px;
     cursor: pointer;
