--- a/src/app/query-logs/views/QueryLogs.scss
+++ b/src/app/query-logs/views/QueryLogs.scss
@@ -13,7 +13,7 @@
     width: 50%;
 }
 
-.query-logs__response {
+.query-logs-result {
     height: 60vh;
     overflow: auto;
     max-height: 60vh;
