--- a/src/app/shared/views/dropdown-menu/DropdownMenu.scss
+++ b/src/app/shared/views/dropdown-menu/DropdownMenu.scss
@@ -63,6 +63,7 @@
     overflow-x: hidden;
     overflow-y: auto;
     min-width: 200px;
+    max-height: 500px;
     &:empty {
         box-shadow: none;
     }
