- Show menu when a switch is clicked - Use portal to render drop down menu list so it does not get cut by non-overflowing parent

--- a/src/app/shared/dropdown-menu/DropdownMenu.scss
+++ b/src/app/shared/dropdown-menu/DropdownMenu.scss
@@ -99,3 +99,12 @@
     height: 1000vh;
     z-index: 100;
 }
+
+.app-dropdown-menu-item-list-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 10000;
+}
