--- a/src/app/shared/pop-up/PopUp.scss
+++ b/src/app/shared/pop-up/PopUp.scss
@@ -7,14 +7,14 @@
 }
 
 .pop-up-in {
-    // animation: pop-up-in 300ms ease forwards;
+    // animation-name: pop-up-in;
     visibility: visible;
     opacity: 1;
     transform: translateY(0) scale(1, 1);
 }
 
 .pop-up-out {
-    // animation: pop-up-out 300ms ease forwards;
+    // animation-name: pop-up-out;
     visibility: hidden;
     opacity: 0;
     transform: translateY(25px) scale(0.9, 0.9);
