--- a/src/app/simulation/simulation-configuration/SimulationConfigurationEditor.scss
+++ b/src/app/simulation/simulation-configuration/SimulationConfigurationEditor.scss
@@ -1,9 +1,14 @@
-.realtime-checkbox-container .icon-button {
-    border-radius: 50%;
-    width: 20px;
-    height: 20px;
-    transform: translate(-17px, -3px);
-    background-color: #555;
-    color: #fff;
-    padding: 0;
+.realtime-checkbox-container {
+    position: relative;
+    display: flex;
+    align-items: center;
+    .icon-button {
+        border-radius: 50%;
+        width: 20px;
+        height: 20px;
+        transform: translate(-17px, -1px);
+        background-color: #555;
+        color: #fff;
+        padding: 0;
+    }
 }
