Show a menu with an option for toggling manual mode  when a regulator is clicked

--- a/src/app/shared/form/checkbox/CheckBox.scss
+++ b/src/app/shared/form/checkbox/CheckBox.scss
@@ -26,7 +26,7 @@
         vertical-align: middle;
         left: 3px;
         transform-origin: 50% 0;
-        width: 30px;
+        width: 100%;
         position: absolute;
         top: 36%;
         transform: scale(0) translateY(-50%);
