--- a/src/app/shared/buttons/basic-button/BasicButton.scss
+++ b/src/app/shared/buttons/basic-button/BasicButton.scss
@@ -7,6 +7,7 @@ button {
     cursor: pointer;
     position: relative;
     font-size: 13px;
+    background-color: #fff;
 }
 
 button.negative {
@@ -18,6 +19,7 @@ button.positive {
     background-color: #3f51b5;
     color: #fff;
     box-shadow: 1px 5px 10px rgba(0, 0, 0, 0.2);
+
     &:hover {
         box-shadow: 1px 6px 15px rgba(0, 0, 0, 0.3);
     }
