Show labels on x axis at an angle

--- a/src/app/App.scss
+++ b/src/app/App.scss
@@ -12,7 +12,7 @@
     border-right: 2px solid rgba(0, 0, 0, 0.08);
 }
 
-.measurement-graphs {
+.measurement-charts {
     width: 30vw;
     overflow-y: auto;
     display: flex;
