--- a/src/app/simulation/measurement-chart/MeasurementChart.scss
+++ b/src/app/simulation/measurement-chart/MeasurementChart.scss
@@ -1,4 +1,4 @@
-.measurement-graph {
+.measurement-chart {
     border: 2px solid rgba(0, 0, 0, 0.3);
     border-radius: 2px;
     background-color: #fff;
