--- a/src/app/navigation/drawer/DrawerItemGroup.scss
+++ b/src/app/navigation/drawer/DrawerItemGroup.scss
@@ -1,25 +1,6 @@
 .drawer-item-group {
     padding-left: 0;
-    .trigger {
-        position: relative;
-        display: flex;
-        align-items: center;
-        transform: translateX(57px);
-        width: 100%;
-        color: rgba(0, 0, 0, 0.7);
-        font-size: inherit;
-        .angle {
-            left: 100%;
-            transition: transform 0.25s ease;
-            transform-origin: 50% 50%;
-            transform: scale(1.5);
-            backface-visibility: hidden;
-            position: absolute;
-            &:after {
-                content: '\f105';
-            }
-        }
-    }
+
     .nested-drawer-items {
         position: absolute;
         left: 103%;
@@ -31,14 +12,17 @@
         min-width: 200px;
         overflow: initial;
     }
+
     .nested-drawer-items__list {
         margin: 0;
         padding: 5px 0;
         overflow-x: hidden;
         overflow-y: auto;
+
         &:empty {
             box-shadow: none;
         }
+
         .drawer-item {
             backface-visibility: hidden;
             color: #000;
@@ -49,14 +33,17 @@
             overflow: hidden;
             padding: 12px 10px;
             cursor: pointer;
+
             &:hover {
                 background-color: #84811114;
             }
+
             font-weight: normal;
             border: none;
             font-size: 14px;
         }
     }
+
     .nested-drawer-items__arrow {
         overflow: hidden;
         position: absolute;
@@ -65,6 +52,7 @@
         transform: translateY(-50%) translateX(-20px);
         top: 25px;
         left: 0;
+
         &::after {
             transform: translateX(70%) rotate(45deg);
             content: '';
@@ -78,8 +66,34 @@
     }
 }
 
+.drawer-item-group__toggle {
+    position: relative;
+    display: flex;
+    align-items: center;
+    transform: translateX(57px);
+    width: 100%;
+    color: rgba(0, 0, 0, 0.7);
+    font-size: inherit;
+    background-color: transparent;
+
+    .drawer-item-group__toggle__angle {
+        left: 100%;
+        transition: transform 0.25s ease;
+        transform-origin: 50% 50%;
+        transform: scale(1.5);
+        backface-visibility: hidden;
+        position: absolute;
+
+        &:after {
+            content: '\f105';
+        }
+    }
+
+}
+
 .drawer-item-group.expanded {
     background-color: rgba(0, 0, 0, 0.08);
+
     .angle {
         transform: rotate(180deg) scale(1.5);
     }
