Update capacitor menu

--- a/src/app/shared/form/form-control/FormControl.scss
+++ b/src/app/shared/form/form-control/FormControl.scss
@@ -6,7 +6,9 @@
 }
 
 .gridappsd-form-control__label {
-    width: 250px;
+    width: 15em;
+    display: flex;
+    flex-flow: column;
 }
 
 .gridappsd-form-control__label__hint {
