--- a/src/app/topology-renderer/menus/capacitor-menu/CapacitorMenu.scss
+++ b/src/app/topology-renderer/menus/capacitor-menu/CapacitorMenu.scss
@@ -1,5 +1,5 @@
 .capacitor-menu {
-    .gridappsd-checkbox__label {
-        width: 105px;
+    .gridappsd-form-control__label {
+        width: 7em;
     }
 }
