--- a/src/app/shared/form/select/Select.scss
+++ b/src/app/shared/form/select/Select.scss
@@ -74,15 +74,34 @@
 }
 
 .select__option-list {
-    overflow-y: auto;
+    overflow: hidden auto;
     min-width: 200px;
-    max-height: calc(100vh - 10px);
+    max-height: calc(100vh - 65px);
     padding: 5px 0;
     margin: 0;
 
     &:empty {
         box-shadow: none;
     }
+}
+
+.select__option-list__filter {
+    position: relative;
+    border: 2px solid #3f51b5;
+    border-radius: 5px;
+    padding: 3px 0;
+    padding-left: 5px;
+    margin: 0 10px;
+    margin-top: 15px;
+    min-width: 200px;
+    display: flex;
+    box-sizing: border-box;
+    height: 40px;
+}
+
+.select__option-list__filter__input {
+    border: none;
+    font-size: 0.9em;
 }
 
 .select__option-list__option {
