Extract inline event handlers into methods

--- a/src/app/shared/buttons/icon-button/IconButton.scss
+++ b/src/app/shared/buttons/icon-button/IconButton.scss
@@ -30,7 +30,7 @@
 .icon-button.style-default:disabled {
     background-color: #e0e0e0;
     box-shadow: none;
-    color: lightgray;
+    color: #efefef;
 }
 
 .icon-button.style-primary {
