--- a/src/app/shared/buttons/icon-button/IconButton.scss
+++ b/src/app/shared/buttons/icon-button/IconButton.scss
@@ -25,25 +25,25 @@
 
 }
 
-.icon-button.style-primary:disabled,
-.icon-button.style-accent:disabled,
-.icon-button.style-default:disabled {
+.icon-button--primary:disabled,
+.icon-button--accent:disabled,
+.icon-button--default:disabled {
     background-color: #e0e0e0;
     box-shadow: none;
     color: #efefef;
 }
 
-.icon-button.style-primary {
+.icon-button--primary {
     background-color: #3f51b5;
     color: #fff;
 }
 
-.icon-button.style-accent {
+.icon-button--accent {
     background-color: #db356e;
     color: #fff;
 }
 
-.icon-button.has-label {
+.icon-button--has-label {
     width: auto;
     height: auto;
     padding: 5px 10px;
@@ -60,11 +60,11 @@
     transform: scale(1.1, 1.1);
 }
 
-.rounded-icon-button.size-large {
+.rounded-icon-button--large {
     transform: scale(1.5, 1.5);
 }
 
-.rounded-icon-button.size-small {
+.rounded-icon-button--small {
     transform: scale(0.85, 0.85);
 }
 
