--- a/src/app/shared/form/select/OptionListPaginator.scss
+++ b/src/app/shared/form/select/OptionListPaginator.scss
@@ -3,7 +3,7 @@
     justify-content: space-evenly;
     align-items: center;
     border-top: 2px solid rgba(0, 0, 0, 0.05);
-    height: 45px;
+    padding: 7px 0;
     box-sizing: border-box;
 }
 
