Change websocket status indicator's icon at top right corner

--- a/src/app/navigation/Navigation.scss
+++ b/src/app/navigation/Navigation.scss
@@ -15,10 +15,23 @@
     }
 }
 
-.icon-button.websocket-status-indicator {
+.websocket-status-indicator {
     margin-left: auto;
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    padding: 0 10px;
+    box-shadow: 0 0 1px #bbb;
+    color: orange;
+}
 
-    i {
-        color: #09d855;
-    }
+.websocket-status-indicator__icon {
+    font-size: 2em;
+    font-weight: bold;
+}
+
+.websocket-status-indicator__status-text {
+    font-size: 0.8em;
 }
